<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HelloDemo</string>
    <string name="hello_world">欢迎登录</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">用户登录</string>
    <string name="title_activity_main_activity">主页</string>
    <string name="accountName_empty"></string>
    <string name="password_empty"></string>
    <string name="loginAccount">loginAccount</string>
    <string name="inputAccount">inputAccount</string>    
    <string name="password">password</string>
    <string name="inputPassword">inputPassword</string>
    <string name="login">login</string>
    
</resources>
