<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:background="@android:color/background_light">
  <!-- 用户登录的布局 -->
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:gravity="center"
    android:text="测试系统"
    android:textColor="@android:color/holo_blue_bright"
    android:textSize="30sp"
    android:textStyle="bold" />
  <!-- 整个LinearLayout是账号和请输入账号的矩形框架 -->
  <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:padding="10sp"
        android:background="@android:color/white" >
        <!-- 帐号的布局 -->
        <TextView
          android:id="@+id/tv_loginAccount"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/loginAccount"
          android:textColor="@android:color/black"
          android:textSize="18.0sp" />
        <!-- EditText表示的是请输入帐号的一个布局 -->
        <EditText
          android:id="@+id/loginAccount_id"
          android:layout_width="160dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:background="@null"
          android:ems="10"
          android:hint="@string/inputAccount"
          android:padding="5.0dip"
          android:paddingRight="40dp"
          android:textColor="#ff3b3b3b"
          android:textSize="16.0sp" >
        </EditText>
   </LinearLayout>
   <!-- 密码和请输入密码的整个布局 -->
   <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     android:orientation="horizontal"
     android:padding="10sp"
     android:background="@android:color/white">
     <!-- 密码的布局 -->
     <TextView
       android:id="@+id/tv_password"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/password"
       android:textColor="@android:color/black"
       android:textSize="18.0sp"/>
     <!-- 请输入密码的布局 -->
     <EditText
       android:id="@+id/password_id"
       android:layout_width="163dp"
       android:layout_height="wrap_content"
       android:layout_weight="1"
       android:background="@null"
       android:ems="10"
       android:hint="@string/inputPassword"
       android:inputType="textPassword"
       android:padding="5.0dip"
       android:paddingRight="30dp"
       android:textColor="#ff3b3b3b"
       android:textSize="16.0sp"/>
       </LinearLayout>
     <Button
      android:id="@+id/login"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="14dp"
      android:layout_marginLeft="15dp"
      android:layout_marginRight="15dp"
      android:layout_marginTop="80dp"
      android:text="@string/login"
      android:textColor="#fff" />
     <!-- 找回密码和理解注册的布局 -->
     <!-- 找回密码和立即注册的布局 -->
   <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     android:background="@android:color/white"
     android:orientation="horizontal"
     android:padding="10sp" >
     <!-- 找回密码 -->
     <TextView
       android:layout_width="70dp"
       android:layout_height="50dp"
       android:layout_marginLeft="40dp"
       android:layout_marginTop="15dp"
       android:text="找回密码"
       android:textSize="15sp"
       android:textStyle="bold" />
     <!-- 立即注册 -->
     <TextView
       android:layout_width="70dp"
       android:layout_height="56dp"
       android:layout_marginLeft="55dp"
       android:layout_marginTop="15dp"
       android:layout_weight="0.03"
       android:text="立即注册"
       android:textSize="15sp"
       android:textStyle="bold" />
   </LinearLayout>
</LinearLayout>